--- a/AlgorithmsPrepare/AlgorithmPrepareCSharpTest/AlgorithmsPrepareCSharpTest.csproj
+++ b/AlgorithmsPrepare/AlgorithmPrepareCSharpTest/AlgorithmsPrepareCSharpTest.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AlgorithmPrepareCSharpTest</RootNamespace>
     <AssemblyName>AlgorithmPrepareCSharpTest</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -16,6 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,9 +51,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="LeetCodeTest.cs" />
     <Compile Include="TcTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HackerRankTest.cs" />
+    <Compile Include="TestUtilityAlgorithm.cs" />
+    <Compile Include="TestSolution.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AlgorithmsPrepareCSharp\AlgorithmsPrepareCSharp.csproj">
